--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+html, body {
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
+  background-color: #F0F2F5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +20,202 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#root {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+#loginPage {
+  display: flex;
+  width: 100%;
+  height: calc(100vh - 64px);
+  align-items: center;
+  justify-content: center;
+}
+
+#loginForm {
+  padding: 10px 0px;
+  background-color: #fff;
+  min-width: 320px;
+  border: #ccc 1px solid;
+  box-shadow: 0px 0px 10px rgb(0 0 0 / 20%);
+  border-radius: 5px;
+}
+
+#loginFormContent {
+  padding: 15px;
+}
+
+
+.loadingWindow{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index:999999;
+}
+.backdrop {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+}
+.loadingContent {
+  display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+.loader {
+  margin: 60px auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-left: 1.1em solid #ffffff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+:root {
+  --shadow-2: rgba(0, 0, 0, 0.2);
+}
+#userList {
+  width: 300px;
+  margin: 10px;
+  background-color: #fff;
+  box-shadow: 0 1px 2px var(--shadow-2);
+  border-radius: 5px;
+}
+.user {
+  cursor: pointer;
+    padding: 10px 15px;
+    border-bottom: #ddd 1px solid;
+}
+.home-page {
+  display: flex;
+}
+#chatWindows {
+  display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    
+  align-items: flex-start;
+}
+.chatWindow{
+  width: 300px;
+    background-color: #fff;
+    box-shadow: 0px 1px 2px var(--shadow-2);
+    border-radius: 5px;
+    margin:5px;
+}
+.chat-header {
+  width: 100%;
+  padding: 5px;
+}
+.chat-messages {
+  border-left: 2px;
+  border-right: 2px;
+  border-style: solid;
+  border-color: #fff;
+  height: 200px;
+  background-color: #F0F2F5;
+  word-wrap:break-word;
+  overflow-y: auto;
+}
+.close-div {
+  float: right;
+  cursor: pointer;
+}
+
+.chatInput, .chatInput:focus {
+  width: 100%;
+    resize: none;
+    border: 0px;
+    padding: 5px;
+}
+
+.messages .time {
+  color: #999;
+  font-size: 0.7em;
+}
+.msg-box {
+  padding-left: 10px;
+}
+.msg-box .msg {
+  padding: 5px 10px;
+  background-color: #fff;
+  margin: 5px;
+  display: inline-block;
+  border-radius: 10px;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  
+  box-shadow: 0px 1px 2px var(--shadow-2);
+}
+.my-msg .msg-box .msg {
+  background-color: rgb(178, 241, 241);
+}
+.recieved-msg .msg-box .msg:before,
+.my-msg .msg-box .msg:after  {
+  width: 0px;
+  height: 0px;
+  border: #fff 5px solid;
+  content: "";
+  padding: 0px;
+  margin: 0px;
+  position: absolute;
+  transform: rotate(45deg);
+  top: 10px;
+}
+.recieved-msg .msg-box .msg:before {
+  left: -6px;
+  border-color: #fff;
+}
+.my-msg .msg-box {
+  padding-right: 10px;
+}
+.my-msg .msg-box .msg:after {
+  right: -6px;
+  border-color: rgb(178, 241, 241);
+}
+.my-msg {
+  text-align: right;
 }
